--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 <div id="carousel" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="src/img/carousel/amcucine - img (1).jpeg" class="d-block w-100" height="100%" alt="1">
+      <img src="src/img/carousel/amcucine - img (1).jpg" class="d-block w-100" height="100%" alt="1">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carousel/amcucine - img (2).jpeg" class="d-block w-100"height="100%" alt="2">
+      <img src="src/img/carousel/amcucine - img (2).jpg" class="d-block w-100"height="100%" alt="2">
     </div>
     <div class="carousel-item">
-      <img src="src/img/carousel/amcucine - img (3).jpeg" class="d-block w-100" height="100%" alt="3">
+      <img src="src/img/carousel/amcucine - img (3).jpg" class="d-block w-100" height="100%" alt="3">
     </div>
     <div class="carousel-item">
       <img src="src/img/carousel/amcucine - img (4).jpeg" class="d-block w-100" height="100%" alt="3">
@@ -77,6 +77,18 @@
     </div>
     <div class="carousel-item">
       <img src="src/img/carousel/amcucine - img (6).jpeg" class="d-block w-100" height="100%" alt="3">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carousel/amcucine - img (6).jpeg" class="d-block w-100" height="100%" alt="3">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carousel/amcucine - img (7).jpeg" class="d-block w-100" height="100%" alt="3">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carousel/amcucine - img (8).jpeg" class="d-block w-100" height="100%" alt="3">
+    </div>
+    <div class="carousel-item">
+      <img src="src/img/carousel/amcucine - img (9).jpeg" class="d-block w-100" height="100%" alt="3">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
